--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -18,13 +18,18 @@
     "studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.2"
+    "@neondatabase/serverless": "^0.9.3",
+    "@prisma/adapter-neon": "^5.14.0",
+    "@prisma/client": "^5.14.0",
+    "dotenv": "^16.4.5",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/ws": "^8.5.10",
     "eslint": "^8.57.0",
-    "prisma": "^5.10.2",
+    "prisma": "^5.14.0",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
