--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "next": "^14.1.1",
+    "next-auth": "5.0.0-beta.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@repo/database": "workspace:*",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "@repo/database": "workspace:*",
     "eslint": "^8.57.0",
     "typescript": "^5.3.3"
   }
