--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -34,5 +34,8 @@
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.8"
   }
 }
