--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --max-warnings 0"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.1.0",
     "next": "^14.1.1",
     "next-auth": "5.0.0-beta.18",
     "react": "^18.2.0",
